<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.InfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black3">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_title"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/normal_picture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_tips1"
            android:textColor="@color/red"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/add_name"
            android:inputType="text"
            android:textColor="@color/black3"
            android:textColorHint="@color/black9"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_tel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:hint="@string/add_tel"
            android:inputType="phone"
            android:textColor="@color/black3"
            android:textColorHint="@color/black9"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_address"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:hint="@string/add_address"
            android:inputType="text"
            android:textColor="@color/black3"
            android:textColorHint="@color/black9"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_tips2"
            android:textColor="@color/red"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/jump"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_sure"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>