<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DeleteActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black3">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/delete_title"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_tips"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <EditText
            android:inputType="phone"
            android:id="@+id/et_tel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:hint="@string/delete_tel"
            android:textColor="@color/black3"
            android:textColorHint="@color/black9"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/jump"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/delete_sure"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>